# silly-wat-linker

./: Cargo.toml  README.md  TODO.md
src/: ast.rs  error.rs  eval.rs  linker.rs  loader.rs  main.rs  parser.rs  pretty.rs  sorter.rs  utils.rs
src/features/: constexpr.rs  data_import.rs  import.rs  mod.rs  numerals.rs  size_adjust.rs  sort.rs  start_merge.rs
src/passes/: importer.rs  mod.rs  size_adjust.rs  sorter.rs  start_merge.rs
