[package]
name = "silly-wat-linker"
version = "0.2.0"
edition = "2021"
description = "A tool that makes writing WebAssembly Text files easier."
repository = "https://github.com/surma/silly-wat-linker"
license = "Apache-2.0"
authors = ["Surma <surma@surma.dev>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = {version = "3.2.14", features = ["derive"] }
